        PR c++/6392         * cp/tree.c (build_cplus_array_type): Handle all quals the same.         (cp_build_qualified_type_real): Look through arrays first.         * c-common.c (c_build_qualified_type): Look through arrays first.         (c_apply_type_quals_to_decl): Look through arrays.

* c-common.c (c_apply_type_quals_to_decl): Unset TREE_READONLY for
        types with constructors.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@72259 138bc75d-0d04-0410-961f-82ee72b054a4